[tool.poetry]
name = "ethostds"
version = "0.1.0"
description = "Turing Data Story using the UK Doctoral Thesis Metadada from EThOS dataset"
authors = ["Isabel Fenton <ifenton@turing.ac.uk>",
           "Katriona Goldmann <kgoldmann@turing.ac.uk>",
           "Ryan Chan <rchan@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
torch = "^2.0.1"
sentence-transformers = "^2.2.2"
transformers = "^4.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
